<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_dialog_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorMain"
        android:text="@string/displayIntelligences"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/sellPrice"/>
            <EditText
                android:id="@+id/et_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/priceHKD"
                android:autofillHints="Price"
                android:inputType="numberDecimal"
                android:paddingHorizontal="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:textSize="15sp"
                android:background="@drawable/edittext_border"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/et_location"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:hint="@string/writeLocation"
            android:autofillHints="Location"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:textSize="15sp"
            android:background="@drawable/edittext_border"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="10dp">
        <Button
            android:id="@+id/btn_cnacel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/btn_round_white_border"
            android:text="@string/cancel"
            android:textColor="@color/colorMain"
            android:textStyle="bold"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/btn_round_main"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>