<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorMain"
        android:text="@string/uploadImage"
        android:textSize="30sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:gravity="center"/>
    <ImageView
        android:id="@+id/iv_upload"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="10dp">
        <Button
            android:id="@+id/btn_cnacel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/btn_round_white_border"
            android:text="@string/cancel"
            android:textColor="@color/colorMain"
            android:textStyle="bold"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn_choose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/btn_round_main"
            android:text="@string/choose"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/btn_round_main"
            android:text="@string/upload"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20sp"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>