<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_dialog_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorMain"
        android:text="@string/rateComment"
        android:textSize="30sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <RatingBar
                android:id="@+id/rb_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="0.01"
                android:theme="@style/RatingBar"
                android:isIndicator="false"/>
            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/darkGold"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="25sp"/>
        <EditText
            android:id="@+id/et_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/commentHere"
            android:autofillHints="Comment"
            android:inputType="textMultiLine"
            android:gravity="top|start"
            android:lines="5"
            android:scrollbars="vertical"
            android:paddingHorizontal="10dp"
            android:paddingTop="5dp"
            android:textSize="20sp"
            android:background="@drawable/edittext_border"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="10dp">
        <Button
            android:id="@+id/btn_cnacel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/btn_round_white_border"
            android:text="@string/cancel"
            android:textColor="@color/colorMain"
            android:textStyle="bold"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/btn_round_main"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>