<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorMain"
        android:text="@string/editName"
        android:textSize="30sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:id="@+id/tv_edit_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="36dp"
            android:paddingStart="36dp"
            android:layout_marginBottom="-10dp"
            android:text="@string/username"
            android:textColor="@color/colorMain"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/et_edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="text"
            android:drawableStart="@drawable/ic_person"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:autofillHints="username" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_username_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/colorRed"
        android:drawableLeft="@drawable/ic_warning_red"
        android:drawableStart="@drawable/ic_warning_red"
        android:drawablePadding="5dp"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="10dp">
        <Button
            android:id="@+id/btn_cnacel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/btn_round_white_border"
            android:text="@string/cancel"
            android:textColor="@color/colorMain"
            android:textStyle="bold"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/btn_round_main"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>