<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorMain"
        android:text="@string/editEmail"
        android:textSize="30sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/doubleConfirmEmail"
        android:gravity="center"
        android:textColor="@color/colorRed"
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="36dp"
            android:layout_marginBottom="-10dp"
            android:text="@string/currEmail"
            android:textColor="@color/colorMain"
            android:textStyle="bold"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/currEmail"
            android:autofillHints="@string/currEmail" />
        <TextView
            android:id="@+id/tv_email_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed"
            android:drawableLeft="@drawable/ic_warning_red"
            android:drawableStart="@drawable/ic_warning_red"
            android:drawablePadding="5dp"
            android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/tv_edit_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="36dp"
            android:layout_marginBottom="-10dp"
            android:text="@string/newEmail"
            android:textColor="@color/colorMain"
            android:textStyle="bold"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/et_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/newEmail"
            android:autofillHints="@string/newEmail" />
        <TextView
            android:id="@+id/tv_new_email_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed"
            android:drawableLeft="@drawable/ic_warning_red"
            android:drawableStart="@drawable/ic_warning_red"
            android:drawablePadding="5dp"
            android:visibility="gone"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="36dp"
            android:layout_marginBottom="-10dp"
            android:text="@string/password"
            android:textColor="@color/colorMain"
            android:visibility="gone"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:drawableStart="@drawable/ic_lock"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:autofillHints="password" />
        <TextView
            android:id="@+id/tv_password_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed"
            android:drawableLeft="@drawable/ic_warning_red"
            android:drawableStart="@drawable/ic_warning_red"
            android:drawablePadding="5dp"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="10dp">
        <Button
            android:id="@+id/btn_cnacel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/btn_round_white_border"
            android:text="@string/cancel"
            android:textColor="@color/colorMain"
            android:textStyle="bold"
            android:textSize="20sp" />
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/btn_round_main"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>