<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame_blog">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_box"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:inputType="text"
                android:hint="@string/search_exchange_hint"
                android:drawableStart="@drawable/ic_search"
                android:drawableLeft="@drawable/ic_search"
                android:drawablePadding="10dp"
                android:paddingHorizontal="10dp"
                android:autofillHints="Search"/>

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_cancel"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_sort"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/layout_border_up_down">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_sort" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/sort"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_drop_down"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorLightGray"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_searchNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_num"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:paddingBottom="5dp"/>

            <ListView
                android:id="@+id/list_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:divider="@color/colorLightGray"
                android:dividerHeight="10sp">
            </ListView>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>